--- a/x86_64_mini.config
+++ b/x86_64_mini.config
@@ -87,7 +87,7 @@ CONFIG_HUGETLBFS=n
 CONFIG_HUGETLB_PAGE=n
 
 # ======================
-# Intel硬件优化 (J4125+I226)
+# Intel硬件优化 (J4125+I226) - 增强硬件加速
 # ======================
 CONFIG_INTEL_IDLE=y
 CONFIG_IGC=y
@@ -98,6 +98,9 @@ CONFIG_IGC_GSO=y
 CONFIG_IGC_TSO=y
 CONFIG_IGC_DIM=y
 CONFIG_IGC_RSS=y
+CONFIG_IGC_VMDQ=y
+CONFIG_IGC_SRIOV=y
+CONFIG_IGC_HWMON=y
 CONFIG_IRQ_AFFINITY_HINT=y
 CONFIG_GENERIC_IRQ_IPI=y
 CONFIG_IRQ_DOMAIN_HIERARCHY=y
@@ -115,6 +118,23 @@ CONFIG_GENERIC_IRQ_MIGRATION=y
 CONFIG_HOTPLUG_CPU=y
 CONFIG_PCIEPORTBUS=y
 CONFIG_HOTPLUG_PCI_PCIE=y
+
+# ======================
+# 网络硬件加速配置
+# ======================
+CONFIG_HAVE_EISA=y
+CONFIG_HAVE_PCI=y
+CONFIG_PCI_DOMAINS=y
+CONFIG_PCI_MSI_IRQ_DOMAIN=y
+CONFIG_PCI_IOV=y
+CONFIG_PCI_PRI=y
+CONFIG_PCI_PASID=y
+CONFIG_PCIEAER=y
+CONFIG_PCIEPORTBUS=y
+CONFIG_HOTPLUG_PCI=y
+CONFIG_HOTPLUG_PCI_ACPI=y
+CONFIG_ACPI_HOTPLUG_PCI=y
+CONFIG_PCI_HOTPLUG=y
 
 # ======================
 # 网络协议栈优化
@@ -160,9 +180,16 @@ CONFIG_TCP_KEEPALIVE_PROBES=3
 CONFIG_TCP_CONG_BBR2=y
 
 # ======================
-# iptables防火墙配置
+# NFTables防火墙配置 (替换iptables)
 # ======================
 CONFIG_NETFILTER=y
+CONFIG_NF_TABLES=y
+CONFIG_NF_TABLES_INET=y
+CONFIG_NF_TABLES_NETDEV=y
+CONFIG_NF_TABLES_IPV4=y
+CONFIG_NF_TABLES_IPV6=y
+CONFIG_NF_TABLES_ARP=y
+CONFIG_NF_TABLES_BRIDGE=y
 CONFIG_NF_CONNTRACK=y
 CONFIG_NF_CONNTRACK_IPV4=y
 CONFIG_NF_CONNTRACK_IPV6=y
@@ -175,27 +202,27 @@ CONFIG_NF_CT_NETLINK=y
 CONFIG_NF_NAT=y
 CONFIG_NF_NAT_MASQUERADE_IPV4=y
 CONFIG_NF_NAT_MASQUERADE_IPV6=y
-CONFIG_NETFILTER_XTABLES=y
-CONFIG_NETFILTER_XT_MARK=y
-CONFIG_NETFILTER_XT_TARGET_MASQUERADE=y
-CONFIG_NETFILTER_XT_TARGET_REDIRECT=y
-CONFIG_NETFILTER_XT_TARGET_LOG=y
-CONFIG_NETFILTER_XT_MATCH_CONNTRACK=y
-CONFIG_NETFILTER_XT_MATCH_STATE=y
-CONFIG_NETFILTER_XT_MATCH_COMMENT=y
-CONFIG_IP_NF_IPTABLES=y
-CONFIG_IP_NF_FILTER=y
-CONFIG_IP_NF_NAT=y
-CONFIG_IP_NF_MANGLE=y
-CONFIG_IP6_NF_IPTABLES=y
-CONFIG_IP6_NF_FILTER=y
-CONFIG_IP6_NF_NAT=y
-CONFIG_IP6_NF_MANGLE=y
+CONFIG_NF_NAT_REDIRECT=y
+CONFIG_NF_NAT_FULLCONE=y
+CONFIG_NF_FLOW_TABLE=y
+CONFIG_NF_FLOW_TABLE_INET=y
+CONFIG_NF_FLOW_TABLE_IPV4=y
+CONFIG_NF_FLOW_TABLE_IPV6=y
+CONFIG_NF_FLOW_TABLE_HW=y
 
 # ======================
-# 内核模块配置 
+# 内核模块配置 - NFTables优化
 # ======================
 CONFIG_PACKAGE_kmod-tcp-bbr=y
+CONFIG_PACKAGE_kmod-nft-core=y
+CONFIG_PACKAGE_kmod-nft-fib=y
+CONFIG_PACKAGE_kmod-nft-nat=y
+CONFIG_PACKAGE_kmod-nft-offload=y
+CONFIG_PACKAGE_kmod-nft-queue=y
+CONFIG_PACKAGE_kmod-nft-nat6=y
+CONFIG_PACKAGE_kmod-nft-compat=y
+CONFIG_PACKAGE_kmod-nft-bridge=y
+CONFIG_PACKAGE_kmod-nft-netdev=y
 CONFIG_PACKAGE_kmod-nf-conntrack=y
 CONFIG_PACKAGE_kmod-nf-conntrack-netlink=y
 CONFIG_PACKAGE_kmod-nf-conntrack6=y
@@ -203,22 +230,19 @@ CONFIG_PACKAGE_kmod-nf-nat=y
 CONFIG_PACKAGE_kmod-nf-nat6=y
 CONFIG_PACKAGE_kmod-nf-reject=y
 CONFIG_PACKAGE_kmod-nf-reject6=y
+CONFIG_PACKAGE_kmod-nf-flow=y
+CONFIG_PACKAGE_kmod-nf-log=y
+CONFIG_PACKAGE_kmod-nf-log2=y
+CONFIG_PACKAGE_kmod-nf-log4=y
+CONFIG_PACKAGE_kmod-nf-log6=y
 CONFIG_PACKAGE_kmod-sched=y
 CONFIG_PACKAGE_kmod-sched-core=y
 CONFIG_PACKAGE_kmod-ifb=y
 CONFIG_PACKAGE_kmod-sched-cake=y
 CONFIG_PACKAGE_kmod-fs-squashfs=y
-CONFIG_PACKAGE_kmod-ipt-core=y
-CONFIG_PACKAGE_kmod-ipt-conntrack=y
-CONFIG_PACKAGE_kmod-ipt-conntrack-extra=y
-CONFIG_PACKAGE_kmod-ipt-nat=y
-CONFIG_PACKAGE_kmod-ipt-nat-extra=y
-CONFIG_PACKAGE_kmod-ipt-filter=y
-CONFIG_PACKAGE_kmod-ipt-ipset=y
-CONFIG_PACKAGE_kmod-ipt-nat6=y
 
 # ======================
-# 加密与硬件加速
+# 加密与硬件加速 - 增强
 # ======================
 CONFIG_PACKAGE_kmod-crypto-crc32c-intel=y
 CONFIG_PACKAGE_kmod-crypto-chacha20poly1305=y
@@ -234,9 +258,14 @@ CONFIG_PACKAGE_kmod-crypto-sha256=y
 CONFIG_PACKAGE_kmod-crypto-sha512=y
 CONFIG_PACKAGE_kmod-crypto-hmac=y
 CONFIG_PACKAGE_kmod-crypto-null=y
+CONFIG_PACKAGE_kmod-crypto-seqiv=y
+CONFIG_PACKAGE_kmod-crypto-cmac=y
+CONFIG_PACKAGE_kmod-crypto-cbc=y
+CONFIG_PACKAGE_kmod-crypto-xts=y
+CONFIG_PACKAGE_kmod-crypto-user=y
 
 # ======================
-# 用户态工具包
+# 用户态工具包 - NFTables工具
 # ======================
 CONFIG_PACKAGE_ethtool-full=y
 CONFIG_PACKAGE_irqbalance=y
@@ -254,21 +283,17 @@ CONFIG_PACKAGE_ca-certificates=y
 CONFIG_PACKAGE_libcurl=y
 CONFIG_PACKAGE_libnetfilter-conntrack=y
 CONFIG_PACKAGE_libnfnetlink=y
+CONFIG_PACKAGE_libnftnl=y
+CONFIG_PACKAGE_libmnl=y
+CONFIG_PACKAGE_nftables=y
+CONFIG_PACKAGE_nftables-json=y
 CONFIG_PACKAGE_libopenssl=y
 CONFIG_PACKAGE_libpcap=y
 CONFIG_PACKAGE_libpcre=y
 CONFIG_PACKAGE_libpcre2=y
-CONFIG_PACKAGE_iptables=y
-CONFIG_PACKAGE_iptables-mod-conntrack-extra=y
-CONFIG_PACKAGE_iptables-mod-filter=y
-CONFIG_PACKAGE_iptables-mod-ipopt=y
-CONFIG_PACKAGE_iptables-mod-nat-extra=y
-CONFIG_PACKAGE_iptables-mod-ulog=y
-CONFIG_PACKAGE_ipset=y
-CONFIG_PACKAGE_ipset-lists=y
 
 # ======================
-# LuCI应用模块 (保留文件管理)
+# LuCI应用模块 - 更新为nftables支持
 # ======================
 CONFIG_PACKAGE_luci-app-arpbind=y
 CONFIG_PACKAGE_luci-app-oaf=y
@@ -340,10 +365,11 @@ CONFIG_PACKAGE_dnsmasq-full=y
 CONFIG_PACKAGE_dnsmasq_full_dhcpv6=y
 CONFIG_PACKAGE_dnsmasq_full_conntrack=y
 CONFIG_PACKAGE_dnsmasq_full_tftp=y
-CONFIG_PACKAGE_dnsmasq_full_ipset=y
+CONFIG_PACKAGE_dnsmasq_full_ipset=n
 CONFIG_PACKAGE_dnsmasq_full_auth=y
 CONFIG_PACKAGE_dnsmasq_full_dnssec=y
 CONFIG_PACKAGE_dnsmasq_full_connmark=y
+CONFIG_PACKAGE_dnsmasq_full_nftset=y
 CONFIG_PACKAGE_odhcpd-ipv6only=y
 CONFIG_PACKAGE_odhcp6c=y
 CONFIG_PACKAGE_ppp=y
