--- a/x86_64_mini.config
+++ b/x86_64_mini.config
@@ -38,56 +38,96 @@ CONFIG_PCI=y
 CONFIG_PCI_MSI=y
 CONFIG_HIGH_RES_TIMERS=y
 CONFIG_SOFTIRQ_ON_OWN_STACK=y
+
+# ======================
+# CPU调度与频率优化 (低延迟+低CPU占用)
+# ======================
 CONFIG_CPU_FREQ=y
-CONFIG_CPU_FREQ_DEFAULT_GOV_ONDEMAND=n
-CONFIG_CPU_FREQ_DEFAULT_GOV_PERFORMANCE=y
-CONFIG_CPU_FREQ_GOV_ONDEMAND=n
+CONFIG_CPU_FREQ_DEFAULT_GOV_PERFORMANCE=n
+CONFIG_CPU_FREQ_DEFAULT_GOV_SCHEDUTIL=y
 CONFIG_CPU_FREQ_GOV_PERFORMANCE=y
-CONFIG_CPU_FREQ_GOV_CONSERVATIVE=n
 CONFIG_CPU_FREQ_GOV_SCHEDUTIL=y
+CONFIG_CPU_FREQ_GOV_CONSERVATIVE=n
+CONFIG_CPU_FREQ_GOV_ONDEMAND=n
+CONFIG_CPU_FREQ_GOV_USERSPACE=n
 CONFIG_INTEL_PSTATE=y
 CONFIG_INTEL_PSTATE_HWP=y
 CONFIG_SCHED_MC=y
 CONFIG_SCHED_SMT=y
-CONFIG_MTRR=y
-CONFIG_X86_INTEL_LPSS=y
-CONFIG_ACPI_CPPC_CPUFREQ=y
-CONFIG_X86_AMD_PSTATE=n
+CONFIG_SCHED_CORE=y
+CONFIG_PREEMPT=y
+CONFIG_PREEMPT_VOLUNTARY=n
+CONFIG_PREEMPT_COUNT=y
+CONFIG_PREEMPT_NOTIFIERS=y
+CONFIG_HAVE_PREEMPT_LAZY=y
+
+# ======================
+# 中断与进程调度优化
+# ======================
+CONFIG_IRQ_AFFINITY_HINT=y
+CONFIG_GENERIC_IRQ_IPI=y
+CONFIG_IRQ_FORCED_THREADING=n
+CONFIG_TASK_IO_ACCOUNTING=y
+CONFIG_PSI=y
+CONFIG_PSI_DEFAULT_DISABLED=n
+CONFIG_SCHED_AUTOGROUP=y
+CONFIG_BSD_PROCESS_ACCT=y
+CONFIG_TICK_CPU_ACCOUNTING=y
+CONFIG_VIRT_CPU_ACCOUNTING=y
+CONFIG_SCHED_HRTICK=y
+CONFIG_GENERIC_IRQ_EFFECTIVE_AFF_MASK=y
+CONFIG_IRQ_DOMAIN=y
+CONFIG_IRQ_BALANCE=y
+
+# ======================
+# 时间与时钟精度优化
+# ======================
+CONFIG_NO_HZ_IDLE=y
+CONFIG_NO_HZ_FULL=y
+CONFIG_NO_HZ_FULL_ALL=y
+CONFIG_NO_HZ=y
+CONFIG_CONTEXT_TRACKING=y
+CONFIG_CONTEXT_TRACKING_FORCE=y
+CONFIG_VIRT_CPU_ACCOUNTING_GEN=y
+CONFIG_HAVE_IRQ_TIME_ACCOUNTING=y
+CONFIG_IRQ_TIME_ACCOUNTING=y
+CONFIG_BSD_PROCESS_ACCT_V3=y
+CONFIG_TIMER_STATS=n
 
 # ======================
 # 内存管理优化 (8GB专用)
 # ======================
 CONFIG_SLUB=y
 CONFIG_SLUB_CPU_PARTIAL=y
-CONFIG_SLUB_CPU_PARTIAL_DEFAULT=64
+CONFIG_SLUB_CPU_PARTIAL_DEFAULT=128
 CONFIG_SLUB_DEBUG=n
 CONFIG_PAGE_POOL=y
+CONFIG_PAGE_POOL_STATS=y
 CONFIG_TRANSPARENT_HUGEPAGE=y
 CONFIG_TRANSPARENT_HUGEPAGE_MADVISE=y
 CONFIG_TRANSPARENT_HUGEPAGE_ALWAYS=n
-CONFIG_ZSMALLOC=n
-CONFIG_ZSWAP=n
-CONFIG_ZRAM=n
-CONFIG_ZRAM_DEFAULT_COMP_ALGORITHM=n
-CONFIG_ZBUD=n
-CONFIG_Z3FOLD=n
-CONFIG_SWAP=n
-CONFIG_FRONTSWAP=n
-CONFIG_CLEANCACHE=n
+CONFIG_DEFERRED_STRUCT_PAGE_INIT=n
+CONFIG_PAGE_IDLE_FLAG=y
+CONFIG_IDLE_PAGE_TRACKING=y
 CONFIG_CMA=y
-CONFIG_CMA_SIZE_MBYTE=256
-CONFIG_CMA_SIZE_PERCENTAGE=10
+CONFIG_CMA_SIZE_MBYTE=512
+CONFIG_CMA_SIZE_PERCENTAGE=20
 CONFIG_DMA_CMA=y
-CONFIG_ARCH_HAS_CACHE_LINE_SIZE=y
-CONFIG_ARCH_HAS_PREFETCH=y
-CONFIG_ARCH_HAS_PREFETCHW=y
+CONFIG_ZONE_DMA32=y
+CONFIG_NUMA=n
 CONFIG_COMPACTION=n
 CONFIG_MIGRATION=n
 CONFIG_HUGETLBFS=n
 CONFIG_HUGETLB_PAGE=n
+CONFIG_ZSMALLOC=n
+CONFIG_ZSWAP=n
+CONFIG_ZRAM=n
+CONFIG_SWAP=n
+CONFIG_FRONTSWAP=n
+CONFIG_CLEANCACHE=n
 
 # ======================
-# Intel硬件优化 (J4125+I226) - 增强硬件加速
+# Intel硬件优化 (J4125+I226) - 极致性能
 # ======================
 CONFIG_INTEL_IDLE=y
 CONFIG_IGC=y
@@ -96,23 +136,19 @@ CONFIG_IGC_TX_NAPI=y
 CONFIG_IGC_GRO=y
 CONFIG_IGC_GSO=y
 CONFIG_IGC_TSO=y
+CONFIG_IGC_LRO=y
 CONFIG_IGC_DIM=y
 CONFIG_IGC_RSS=y
 CONFIG_IGC_VMDQ=y
 CONFIG_IGC_SRIOV=y
 CONFIG_IGC_HWMON=y
-CONFIG_IRQ_AFFINITY_HINT=y
-CONFIG_GENERIC_IRQ_IPI=y
-CONFIG_IRQ_DOMAIN_HIERARCHY=y
-CONFIG_IRQ_FORCED_THREADING=y
-CONFIG_GENERIC_IRQ_EFFECTIVE_AFF_MASK=y
-CONFIG_IRQ_DOMAIN=y
-CONFIG_IRQ_BALANCE=y
+CONFIG_IGC_DCA=y
 CONFIG_XPS=y
 CONFIG_RPS=y
 CONFIG_RFS=y
 CONFIG_RFS_ACCEL=y
 CONFIG_NET_RX_BUSY_POLL=y
+CONFIG_NET_RX_BUSY_POLL_BUDGET=64
 CONFIG_DMA_DIRECT_REMAP=y
 CONFIG_GENERIC_IRQ_MIGRATION=y
 CONFIG_HOTPLUG_CPU=y
@@ -130,27 +166,40 @@ CONFIG_PCI_IOV=y
 CONFIG_PCI_PRI=y
 CONFIG_PCI_PASID=y
 CONFIG_PCIEAER=y
-CONFIG_PCIEPORTBUS=y
 CONFIG_HOTPLUG_PCI=y
 CONFIG_HOTPLUG_PCI_ACPI=y
 CONFIG_ACPI_HOTPLUG_PCI=y
 CONFIG_PCI_HOTPLUG=y
+CONFIG_NET_DEVLINK=y
+CONFIG_DIMLIB=y
+CONFIG_NET_FLOW_LIMIT=y
+CONFIG_NET_SWITCHDEV=y
+CONFIG_NET_L3_MASTER_DEV=y
 
 # ======================
-# 网络协议栈优化
+# 网络协议栈深度优化
 # ======================
 CONFIG_KERNEL_TCP_CONG_BBR2=y
-CONFIG_CRYPTO_AES_NI_INTEL=y
-CONFIG_NET_SCH_DEFAULT=n
-CONFIG_DEFAULT_FQ_CODEL=n
+CONFIG_DEFAULT_TCP_CONG="bbr2"
+CONFIG_TCP_BBR2_FLOOR=10
+CONFIG_TCP_BBR2_ECN=y
+CONFIG_TCP_BBR2_ECN_AGGR=y
+CONFIG_TCP_BBR2_DCTCP_RTT=y
+CONFIG_TCP_BBR2_INFLIGHT_GAIN=2
+CONFIG_TCP_BBR2_INFLIGHT_RTT=y
+CONFIG_TCP_BBR2_PROBE_RTT=y
+CONFIG_TCP_BBR2_PROBE_RTT_GAIN=1
+CONFIG_TCP_BBR2_PROBE_RTT_INTVL=5
+CONFIG_TCP_BBR2_PROBE_RTT_LEN=1
+CONFIG_TCP_KEEPALIVE_INTVL=20
+CONFIG_TCP_KEEPALIVE_PROBES=5
+CONFIG_TCP_FIN_TIMEOUT=10
+CONFIG_TCP_RETRANS_COLLAPSE=n
+CONFIG_TCP_MD5SIG=y
+CONFIG_TCP_AO=y
 CONFIG_TCP_FASTOPEN=y
 CONFIG_SYN_COOKIES=y
 CONFIG_UDP_GRO=y
-CONFIG_NET_SCH_FQ_CODEL=y
-CONFIG_NET_SCH_FQ=y
-CONFIG_NET_SCH_CAKE=y
-CONFIG_NET_SCH_MQPRIO=y
-CONFIG_TCP_NOTSENT_LOWAT=32768
 CONFIG_PACKET=y
 CONFIG_IP_ADVANCED_ROUTER=y
 CONFIG_IP_MULTIPLE_TABLES=y
@@ -164,7 +213,6 @@ CONFIG_IPV6_ROUTER_PREF=y
 CONFIG_IPV6_ROUTE_INFO=y
 CONFIG_INET_ESP=y
 CONFIG_INET_IPCOMP=y
-CONFIG_TCP_MD5SIG=y
 CONFIG_NET_UDP_TUNNEL=y
 CONFIG_NET_FOU=y
 CONFIG_NET_IP_TUNNEL=y
@@ -173,14 +221,26 @@ CONFIG_NET_IPGRE_BROADCAST=y
 CONFIG_NET_IPVTI=y
 
 # ======================
-# TCP连接优化
+# 网络队列管理优化
 # ======================
-CONFIG_TCP_KEEPALIVE_INTVL=30
-CONFIG_TCP_KEEPALIVE_PROBES=3
-CONFIG_TCP_CONG_BBR2=y
+CONFIG_NET_SCH_MQPRIO=y
+CONFIG_NET_SCH_FQ=y
+CONFIG_NET_SCH_FQ_CODEL=n
+CONFIG_NET_SCH_CAKE=y
+CONFIG_NET_SCH_ETF=y
+CONFIG_NET_SCH_TAPRIO=y
+CONFIG_NET_SCH_ETS=y
+CONFIG_NET_SCH_MQPRIO_LIB=y
+CONFIG_NET_EMATCH=y
+CONFIG_NET_CLS=y
+CONFIG_NET_CLS_BASIC=y
+CONFIG_NET_CLS_FLOW=y
+CONFIG_NET_CLS_ROUTE4=y
+CONFIG_NET_CLS_FW=y
+CONFIG_NET_CLS_TCINDEX=y
 
 # ======================
-# NFTables防火墙配置 (替换iptables)
+# NFTables防火墙配置 (高性能)
 # ======================
 CONFIG_NETFILTER=y
 CONFIG_NF_TABLES=y
@@ -209,9 +269,40 @@ CONFIG_NF_FLOW_TABLE_INET=y
 CONFIG_NF_FLOW_TABLE_IPV4=y
 CONFIG_NF_FLOW_TABLE_IPV6=y
 CONFIG_NF_FLOW_TABLE_HW=y
+CONFIG_NFT_SYNPROXY=y
+CONFIG_NFT_OSF=y
+CONFIG_NFT_TPROXY=y
 
 # ======================
-# 内核模块配置 - NFTables优化
+# I/O调度优化
+# ======================
+CONFIG_MQ_IOSCHED_DEADLINE=y
+CONFIG_MQ_IOSCHED_KYBER=y
+CONFIG_IOSCHED_BFQ=n
+CONFIG_IOSCHED_CFQ=n
+CONFIG_DEFAULT_MQ_IOSCHED="kyber"
+CONFIG_BLK_DEV_THROTTLING=y
+CONFIG_BLK_WBT=y
+CONFIG_BLK_WBT_MQ=y
+CONFIG_BLK_CGROUP_IOCOST=y
+CONFIG_BLK_DEBUG_FS=n
+
+# ======================
+# 电源管理优化 (性能优先)
+# ======================
+CONFIG_PM=y
+CONFIG_PM_SLEEP=y
+CONFIG_SUSPEND=y
+CONFIG_HIBERNATION=n
+CONFIG_PM_WAKELOCKS=n
+CONFIG_PM_DEBUG=n
+CONFIG_ACPI=y
+CONFIG_ACPI_THERMAL=y
+CONFIG_CPU_IDLE_GOV_MENU=y
+CONFIG_CPU_IDLE=y
+
+# ======================
+# 内核模块配置 - 极致性能
 # ======================
 CONFIG_PACKAGE_kmod-tcp-bbr=y
 CONFIG_PACKAGE_kmod-nft-core=y
@@ -242,7 +333,7 @@ CONFIG_PACKAGE_kmod-sched-cake=y
 CONFIG_PACKAGE_kmod-fs-squashfs=y
 
 # ======================
-# 加密与硬件加速 - 增强
+# 加密与硬件加速
 # ======================
 CONFIG_PACKAGE_kmod-crypto-crc32c-intel=y
 CONFIG_PACKAGE_kmod-crypto-chacha20poly1305=y
@@ -263,24 +354,22 @@ CONFIG_PACKAGE_kmod-crypto-cmac=y
 CONFIG_PACKAGE_kmod-crypto-cbc=y
 CONFIG_PACKAGE_kmod-crypto-xts=y
 CONFIG_PACKAGE_kmod-crypto-user=y
+CONFIG_CRYPTO_AES_NI_INTEL=y
 
 # ======================
-# 用户态工具包 - NFTables工具
+# 用户态工具包 - 性能监控
 # ======================
-CONFIG_PACKAGE_ethtool-full=y
+CONFIG_PACKAGE_ethtool=y
 CONFIG_PACKAGE_irqbalance=y
 CONFIG_PACKAGE_iperf3=y
 CONFIG_PACKAGE_ip-full=y
-CONFIG_PACKAGE_tcpdump=y
-CONFIG_PACKAGE_htop=y
-CONFIG_PACKAGE_sysstat=y
 CONFIG_PACKAGE_procps-ng=y
-CONFIG_PACKAGE_lm-sensors=y
 CONFIG_PACKAGE_curl=y
 CONFIG_PACKAGE_wget-ssl=y
 CONFIG_PACKAGE_ca-bundle=y
 CONFIG_PACKAGE_ca-certificates=y
 CONFIG_PACKAGE_libcurl=y
+CONFIG_PACKAGE_perf=y
 CONFIG_PACKAGE_libnetfilter-conntrack=y
 CONFIG_PACKAGE_libnfnetlink=y
 CONFIG_PACKAGE_libnftnl=y
@@ -293,7 +382,7 @@ CONFIG_PACKAGE_libpcre=y
 CONFIG_PACKAGE_libpcre2=y
 
 # ======================
-# LuCI应用模块 - 更新为nftables支持
+# LuCI应用模块
 # ======================
 CONFIG_PACKAGE_luci-app-arpbind=y
 CONFIG_PACKAGE_luci-app-oaf=y
@@ -326,39 +415,6 @@ CONFIG_PACKAGE_lscpu=y
 CONFIG_PACKAGE_lsb-release=y
 
 # ======================
-# 系统安全加固 (优化版)
-# ======================
-CONFIG_SECCOMP=y
-CONFIG_SECCOMP_FILTER=y
-CONFIG_HAVE_ARCH_SECCOMP_FILTER=y
-CONFIG_CC_STACKPROTECTOR_REGULAR=y
-CONFIG_STRICT_DEVMEM=y
-CONFIG_IO_STRICT_DEVMEM=y
-CONFIG_SLAB_FREELIST_RANDOM=y
-CONFIG_SLAB_FREELIST_HARDENED=y
-CONFIG_SECURITY=y
-CONFIG_SECURITY_APPARMOR=y
-CONFIG_INIT_STACK_ALL=y
-CONFIG_SLAB_MERGE_DEFAULT=n
-CONFIG_RANDOMIZE_BASE=n
-
-# ======================
-# 内核子系统配置
-# ======================
-CONFIG_KERNEL_CGROUPS=y
-CONFIG_KERNEL_NAMESPACES=y
-CONFIG_KERNEL_UTS_NS=y
-CONFIG_KERNEL_IPC_NS=y
-CONFIG_KERNEL_USER_NS=y
-CONFIG_KERNEL_PID_NS=y
-CONFIG_KERNEL_NET_NS=y
-CONFIG_KERNEL_CGROUP_DEVICE=y
-CONFIG_KERNEL_CGROUP_FREEZER=y
-CONFIG_KERNEL_CGROUP_NET_PRIO=y
-CONFIG_KERNEL_CGROUP_PERF=y
-CONFIG_KERNEL_CGROUP_SCHED=y
-
-# ======================
 # 网络服务配置
 # ======================
 CONFIG_PACKAGE_dnsmasq-full=y
@@ -376,6 +432,41 @@ CONFIG_PACKAGE_ppp=y
 CONFIG_PACKAGE_ppp-mod-pppoe=y
 CONFIG_PACKAGE_ppp-mod-pptp=y
 CONFIG_PACKAGE_ppp-mod-pppol2tp=y
+
+# ======================
+# 系统安全加固 (性能友好)
+# ======================
+CONFIG_SECCOMP=y
+CONFIG_SECCOMP_FILTER=y
+CONFIG_HAVE_ARCH_SECCOMP_FILTER=y
+CONFIG_CC_STACKPROTECTOR_REGULAR=y
+CONFIG_STRICT_DEVMEM=y
+CONFIG_IO_STRICT_DEVMEM=y
+CONFIG_SLAB_FREELIST_RANDOM=y
+CONFIG_SLAB_FREELIST_HARDENED=y
+CONFIG_SECURITY=y
+CONFIG_SECURITY_APPARMOR=y
+CONFIG_INIT_STACK_ALL=y
+CONFIG_SLAB_MERGE_DEFAULT=n
+CONFIG_RANDOMIZE_BASE=n
+CONFIG_STATIC_USERMODEHELPER=y
+CONFIG_STATIC_USERMODEHELPER_PATH=""
+
+# ======================
+# 内核子系统配置
+# ======================
+CONFIG_KERNEL_CGROUPS=y
+CONFIG_KERNEL_NAMESPACES=y
+CONFIG_KERNEL_UTS_NS=y
+CONFIG_KERNEL_IPC_NS=y
+CONFIG_KERNEL_USER_NS=y
+CONFIG_KERNEL_PID_NS=y
+CONFIG_KERNEL_NET_NS=y
+CONFIG_KERNEL_CGROUP_DEVICE=y
+CONFIG_KERNEL_CGROUP_FREEZER=y
+CONFIG_KERNEL_CGROUP_NET_PRIO=y
+CONFIG_KERNEL_CGROUP_PERF=y
+CONFIG_KERNEL_CGROUP_SCHED=y
 
 # ======================
 # 基础系统配置
