--- a/x86_64_mini.config
+++ b/x86_64_mini.config
@@ -331,6 +331,7 @@ CONFIG_PACKAGE_kmod-sched-core=y
 CONFIG_PACKAGE_kmod-ifb=y
 CONFIG_PACKAGE_kmod-sched-cake=y
 CONFIG_PACKAGE_kmod-fs-squashfs=y
+CONFIG_PACKAGE_kmod-ipt-ipopt=y
 
 # ======================
 # 加密与硬件加速
