--- a/x86_64_mini.config
+++ b/x86_64_mini.config
@@ -396,6 +396,7 @@ CONFIG_PACKAGE_luci-proto-ipv6=y
 CONFIG_PACKAGE_luci-proto-ppp=y
 CONFIG_PACKAGE_luci-theme-bootstrap=y
 CONFIG_PACKAGE_luci-mod-admin-full=y
+CONFIG_PACKAGE_luci-app-smartdns=y
 
 # ======================
 # 系统基础组件
